# Starlight-Ridge

./: .gitignore  BUILD_EDITOR_RELEASE.bat  BUILD_MENU.bat  BUILD_MENU_GIT_BASH.bat  BUILD_RELEASE_ALL.bat  CREATE_DIAGNOSTICS.bat  Cargo.toml  ORGANIZE_PATCH_DOCS.bat  PATCH_MANIFEST_phase51f.txt  PATCH_MANIFEST_phase51g2.txt  PATCH_MANIFEST_phase51i.txt  README.md  RUN_ANIMATION_RIG_EDITOR_DEBUG.bat  RUN_ASSET_EDITOR_DEBUG.bat  RUN_ASSET_IMPORT_EDITOR_DEBUG.bat  RUN_CHARACTER_ANIMATION_EDITOR_DEBUG.bat  RUN_CHARACTER_EDITOR_DEBUG.bat  RUN_DATA_EDITOR_DEBUG.bat  RUN_EDITOR_DEBUG.bat  RUN_EDITOR_DIAGNOSTIC.bat  RUN_EDITOR_RELEASE.bat  RUN_GAME_DEBUG.bat  RUN_GAME_GUI_EDITOR_DEBUG.bat  RUN_NATIVE_EDITOR_APP_DEBUG.bat  RUN_PIXEL_ATLAS_EDITOR_DEBUG.bat  RUN_VOXEL_PANEL_EDITOR_DEBUG.bat  RUN_WORLD_EDITOR_DEBUG.bat  build.bat  build.sh  phase53e_template_stats.json
assets/art_source/: Residential House.glb
assets/shaders/: debug_grid.vert  textured_quad.frag
content/: ROLLUP_TEST_MANIFEST_2026-04-27.md  RUN_ASSET_LAB.bat  RUN_ASSET_LAB_GIT_BASH.sh  RUN_GAME_RELEASE.bat  RUN_WEB_EDITOR_LAN.bat  RUN_WEB_EDITOR_LAN_WRITE.bat
content/contracts/: phase52_validation_profile.ron
content/editor/: asset_studio_phase27.ron  character_studio_workflow_phase44.ron  native_asset_studio_panels_phase29.ron  native_editor_layout_phase27.ron  pixel_editor_workflow_phase42.ron  pixel_editor_workflow_phase43.ron
content/editor_animation/: phase21_animation_editor_timeline_events.ron
content/editor_character/: character_concepts_phase51g.ron  character_studio_phase44.ron  character_validation_phase46.ron  frame_anchors_phase45.ron  tool_sockets_phase45.ron
content/editor_export/: phase20_editor_export_validation_pipeline.ron
content/editor_hybrid_world/: hybrid_world_pipeline_phase51i.ron
content/editor_logic/: logic_blueprint_phase39.ron
content/editor_pipeline/: phase19_editor_atlas_pipeline.ron
content/editor_tools/: dynamic_voxelizer_commands.ron  dynamic_voxelizer_profiles.ron  dynamic_voxelizer_validation_rules.ron  external_tools.ron  native_editor_apps.ron  phase53e_character_template_profiles.ron  phase53e_character_template_validation_rules.ron  phase53f_voxel_rig_preview_commands.ron  phase53f_voxel_rig_preview_profiles.ron  phase53f_voxel_rig_preview_validation_rules.ron  spring_bone_profiles.ron  third_party_reference_assets.ron  voxel_generator_commands.ron  voxel_generator_profiles.ron  voxel_rig_profiles.ron
content/editor_voxel_panels/: README.md  phase53g_manifest.ron  phase53h_manifest.ron  phase53i_manifest.ron  phase53j_manifest.ron  phase53k_1_manifest.ron  phase53k_2_manifest.ron  phase53k_manifest.ron
content/editor_web/: web_companion_phase40.ron  web_editor_parity_phase50.ron
content/editor_worldgen/: generated_scene_workflow_phase48.ron
content/game_gui/: game_gui_editor_manifest.ron
content/metadata/: entity_sprite_sheet_phase5.ron  oceans_heart_bridge_phase17.ron
content/schedules/: shopkeeper_daily.ron
content/shops/: general_store.ron
content/terrain/: terrain_types.ron
content/tiles/: README.md  base_tiles_autumn.ron  base_tiles_spring.ron  base_tiles_summer.ron  base_tiles_winter.ron  base_tileset.ron  base_tileset_roles.ron  base_tileset_roles.ron.phase31.bak
content/voxel_assets/: phase53e_character_templates.ron  voxel_asset_registry.ron  voxel_import_rules.ron  voxel_materials.ron  voxel_validation_rules.ron
content/voxel_contracts/: dynamic_voxelizer_contracts.ron  phase53f_voxel_rig_preview_contracts.ron  spring_bone_contracts.ron  voxel_rig_contracts.ron
content/voxel_panels/: README.md  (+2 more)
content/voxels/: README.md
crates/app/: Cargo.toml
crates/app/src/: egui_editor.rs  lib.rs  main.rs  voxel_scene.rs
crates/editor_core/: Cargo.toml
crates/editor_core/src/: animation_pipeline.rs  asset_studio.rs  atlas_pipeline.rs  character_lab.rs  export_pipeline.rs  lib.rs  mode.rs  native_shell.rs  selection.rs
crates/editor_data_bridge/: Cargo.toml
crates/editor_data_bridge/src/: lib.rs
crates/engine_render_gl/: Cargo.toml
crates/engine_render_gl/src/: lib.rs
crates/engine_window/: Cargo.toml
crates/engine_window/src/: lib.rs
crates/game_core/: Cargo.toml
crates/game_core/src/: lib.rs  modes.rs  state.rs
crates/game_data/: Cargo.toml
crates/game_data/src/: defs.rs  lib.rs  loader.rs  registry.rs  validate.rs  vox_rig.rs
docs/: ARCHITECTURE.md  AUDIT_SUMMARY.md  BUILD_SCRIPT_WINDOWS.md  CHARACTER_MODULAR_SLOT_STANDARD.md  CHARACTER_TEMPLATE_QA_CHECKLIST.md  CONTENT_AUTHORING.md  CURRENT_SOURCE_ROLLUP_phase53n_2026-04-29.txt  DYNAMIC_VOXELIZER_CONTRACTS.md  DYNAMIC_VOXELIZER_EDITOR_TAB_PLAN.md  DYNAMIC_VOXELIZER_LEGAL_NOTE.md  DYNAMIC_VOXELIZER_PERFORMANCE_LIMITS.md  EDITOR_COMPLETION_ROADMAP.md  EDITOR_GUIDE.md  EDITOR_UX_AUDIT.md  EXTERNAL_TOOLS_MAGICA_BLOCKBENCH_BLENDER.md  GETTING_STARTED.md  PATCH_MANIFEST_PHASE53D.md  PATCH_MANIFEST_PHASE53E.md  PATCH_MANIFEST_PHASE53F.md  PATCH_MANIFEST_phase51g.txt  PATCH_MANIFEST_phase51h.txt  PATCH_MANIFEST_phase52a.txt  PATCH_MANIFEST_phase53_pixel_voxel_first.txt  PATCH_MANIFEST_phase53b_pixel_voxel_generator.txt  PATCH_MANIFEST_phase53f.txt  PATCH_MANIFEST_phase53f_1.txt  PATCH_MANIFEST_phase53f_2.txt  PATCH_MANIFEST_phase53j_1.txt  PATCH_MANIFEST_phase53k_2.txt  PATCH_MANIFEST_phase53m.txt  PATCH_MANIFEST_phase53m_1.txt  PATCH_MANIFEST_phase53n.txt  PATCH_MANIFEST_phase53q.txt  PATCH_MANIFEST_phase54a.txt  PATCH_MANIFEST_phase54a_1.txt  PATCH_MANIFEST_phase55a.txt  PHASE41_README.md  PHASE51D_PIXEL_EDITOR_REAL_CANVAS.md  PHASE51F_EGUI_WORLD_LAYER_EDITOR.md  PHASE52A_README.md  (+58 more)
tools/: asset_lab.html  asset_lab_server.py  build_menu.ps1  organize_patch_docs.py
(+353 files in other folders)
