[package]
name = "editor_data_bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
game_data = { path = "../game_data" }
game_world = { path = "../game_world" }
