[package]
name = "engine_window"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
winit.workspace = true
glutin.workspace = true
glutin-winit.workspace = true
shared_types = { path = "../shared_types" }
