[package]
name = "game_data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
ron.workspace = true
log.workspace = true
shared_types = { path = "../shared_types" }
game_world = { path = "../game_world" }
